--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,11 @@ name: CI
 
 on:
   pull_request:
+    branches:
+      - main
   push:
-    branches: [ main ]
+    branches: 
+      - '*'
 
 jobs:
   scan_ruby:
@@ -88,7 +91,7 @@ jobs:
       - name: Run tests
         env:
           RAILS_ENV: test
-          DATABASE_URL: postgres://postgres:postgres@localhost:5432
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432/market_place_servicos_test
           # REDIS_URL: redis://localhost:6379/0
         run: |
           bin/rails db:create
