--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "@rails/ujs": "^7.1.3-4",
-    "rails_admin": "3.3.0"
+    "@tailwindcss/cli": "^4.1.4",
+    "rails_admin": "3.3.0",
+    "tailwindcss": "^4.1.4"
   },
   "scripts": {
-    "build:css": "sass ./app/assets/stylesheets/rails_admin.scss:./app/assets/builds/rails_admin.css --no-source-map --load-path=node_modules"
+    "build:css": "npx @tailwindcss/cli -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   },
   "devDependencies": {
     "sass": "^1.86.3"
